--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -72,13 +72,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-right: 1px solid #ccc;
-
 }
 
-.home-page {
+.middle-main {
   border-right: 1px solid #ccc;
 }
+
 /* .left-main {
   position: fixed;
   bottom: 10px;
