--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -15,6 +15,9 @@
   margin-top: 30px;
 
 }
+/* .logo:hover {
+  transform: rotate(360deg);
+} */
 
 .wumblr-logo {
   height: 20px;
@@ -38,7 +41,7 @@
   display: flex;
   position: fixed;
   top: 10px;
-  right: 20px;
+  right: 300px;
   height: 10px;
   width: 300px;
   padding: 13px;
@@ -48,6 +51,7 @@
   border: none;
   border-radius: 8px;
   cursor: pointer;
+
 }
 .nav-bar {
   position: fixed;
@@ -59,7 +63,6 @@
   left: 400px;
   padding: 10px;
   border: none;
-  cursor: pointer;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -74,24 +77,30 @@
   width: 200px;
   margin: 5px;
   padding: 10px;
-  background-color: #4d6184;
+  background-color:transparent;
   color: #fff;
   border: none;
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
 }
+.home-button:hover {
+  background-color: #4d6184;
+}
 .explore-button {
   cursor: pointer;
   width: 200px;
   margin: 5px;
   padding: 10px;
-  background-color: #4d6184;
+  background-color:transparent;
   color: #fff;
   border: none;
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
+}
+.explore-button:hover {
+  background-color: #4d6184;
 }
 
 .activity-button {
@@ -99,12 +108,15 @@
   width: 200px;
   margin: 5px;
   padding: 10px;
-  background-color: #4d6184;
+  background-color:transparent;
   color: #fff;
   border: none;
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
+}
+.activity-button:hover {
+  background-color: #4d6184;
 }
 
 .messages-button {
@@ -113,25 +125,31 @@
   width: 200px;
   margin: 5px;
   padding: 10px;
-  background-color: #4d6184;
+
+  background-color:transparent;
   color: #fff;
   border: none;
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+.messages-button:hover {
+  background-color: #4d6184;
+}
 .inbox-button {
   cursor: pointer;
   width: 200px;
   margin: 5px;
   padding: 10px;
-  background-color: #4d6184;
+  background-color:transparent;
   color: #fff;
   border: none;
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
-
+.inbox-button:hover{
+  background-color: #4d6184;
+}
 .create-post {
   cursor: pointer;
   background-color: #4d90fe;
@@ -152,10 +170,13 @@
   width: 200px;
   margin: 5px;
   padding: 10px;
-  background-color: #4d6184;
+  background-color:transparent;
   color: #fff;
   border: none;
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
 
+.log-out-button:hover{
+  background-color: #4d6184;
 }
