--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -3,11 +3,19 @@
     padding-bottom: 2000px;
 } */
 
+.post-title {
+  max-width: 500px;
+  overflow-wrap: break-word;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .each-post {
   display: flex;
   background-color: white;
   color: black;
   margin-bottom: 20px;
+  /* width: 1000px; */
   padding: 10px;
   border-radius: 8px;
   box-shadow: 0 2px 4px black;
@@ -15,6 +23,7 @@
   flex-direction: column;
   width: fit-content;
 }
+
 
 /* .search-bar {
   display: flex;
@@ -31,7 +40,8 @@
 
 .post-description {
   display: flex;
-  width: 600px;
+  width: 500px;
+  overflow-wrap: break-word;
   /* overflow-wrap: break-word;
   word-wrap: break-word;
   white-space: pre-wrap; */
@@ -45,6 +55,7 @@
   margin-left: 15px;
   font-weight: bold;
 }
+
 .follow:hover {
   text-decoration: underline;
 }
@@ -66,6 +77,7 @@
   padding: 0;
 
 }
+
 .reblog {
   cursor: pointer;
   width: fit-content;
@@ -74,6 +86,7 @@
   padding: 0;
 
 }
+
 .share {
   cursor: pointer;
   width: fit-content;
@@ -81,14 +94,17 @@
   border: none;
   padding: 0;
 }
+
 .delete-post {
   cursor: pointer;
   width: fit-content;
   background: none;
   border: none;
-  padding: 0;
-
+  padding: 0px;
+  /* border: 1px solid red; */
+  /* z-index: 2; */
 }
+
 .edit-post {
   cursor: pointer;
   width: fit-content;
@@ -111,23 +127,27 @@
   gap: 20px;
 
 }
+
 .name-follow {
   display: flex;
   align-items: center;
 }
+
 .user-name {
   font-weight: bold;
 }
+
 .post-header {
   display: flex;
   justify-content: space-between;
 }
 
 .post-image {
-  width: 600px;
+  width: 500px;
   height: auto;
   cursor: pointer;
 }
+
 .notes {
   display: flex;
   align-items: center;
@@ -140,10 +160,12 @@
   height: 35px;
   text-align: center;
 }
+
 .notes-count {
   font-weight: bold;
   color: black;
 }
+
 .notes-word {
   color: #BBBBBB;
 }
@@ -152,33 +174,33 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: fit-content;
+  border-left: 1px solid #21374F;
+  padding-left: 8px;
+  padding-right: 8px;
+  /* margin-left: 538px; */
+  border-right: 1px solid #21374F;
+  /* margin-right: 538px; */
 }
 
 .post-date {
   color: #BBBBBB;
   margin-top: -10px;
+  border-bottom: 1px solid gray;
+  padding-bottom: 10px;
 }
+
 .delete-edit {
   display: flex;
   /* justify-content: space-evenly; */
-  justify-content: flex-end;
-  gap: 45px;
+  justify-content: center;
+  gap: 20px;
+  margin-right: 45px;
 
-}
-/* .middle-main {
-  border-right: 1px solid #ccc;
 }
 
 .home-page {
-  border-right: 1px solid #ccc;
-} */
-/* .left-main {
-  position: fixed;
-  bottom: 10px;
-  left: 400px;
-  color: #fff;
-  padding: 10px;
-  border: none;
-  cursor: pointer;
-  border-right: 1px solid #ccc;
-} */
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
