--- a/react-vite/src/components/Post/Post.css
+++ b/react-vite/src/components/Post/Post.css
@@ -1,7 +1,7 @@
 .comment {
   display: flex;
   flex-direction: column;
-  width: 600px;
+  width: 500px;
   background-color: white;
   color: black;
   border: 1px solid black;
@@ -14,7 +14,7 @@
 .commnamedate {
   display: flex;
   justify-content: space-between;
-  width: 600px;
+  width: 500px;
   margin-bottom: 10px;
   border-bottom: 1px solid black;
 }
@@ -25,6 +25,53 @@
   align-items: center;
 }
 
-/* .first-to-reply {
-  color: #555555;
-} */
+.icons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.first-to-reply {
+  color: white;
+  font-weight: Bold;
+  width: fit-content;
+}
+
+.top-post-page {
+  display: flex;
+  /* flex-direction: column; */
+}
+
+.post-header {
+  display: flex;
+  width: fit-content;
+}
+
+body {
+  font-family: sans-serif;
+}
+
+.create-comment:hover {
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0);
+}
+
+.comment-create {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.create-comment {
+  cursor: pointer;
+  background-color: #00B8FF;
+  color: #000;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 40px;
+  cursor: pointer;
+  font-size: 15px;
+  font-weight: bold;
+  width: 200px;
+  height: 45px;
+  /* font-size: 25px; */
+}
