--- a/react-vite/src/components/LoginFormModal/LoginForm.css
+++ b/react-vite/src/components/LoginFormModal/LoginForm.css
@@ -32,9 +32,9 @@
 
 .errors {
     color: red;
-    position: fixed;
+    /* position: fixed; */
     font-size: 14px;
-    padding-top: 8px;
+    /* padding-top: 8px; */
 }
 
 .errors1 {
