--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -15,6 +15,7 @@
   /* padding-left: 250px; */
   display: flex;
   justify-content: right;
+  position: relative;
 }
 
 .logo {
@@ -59,6 +60,10 @@
   justify-content: flex-end;
   /* flex-grow: 1; */
   margin-left: 20px;
+  position: fixed;
+  /* z-index: 60; */
+  top: 4px;
+  right:30px
 }
 
 .search-bar {
@@ -88,6 +93,10 @@
   color: #BCC3CA;
 }
 
+.search-bar:hover {
+  cursor: not-allowed;
+}
+
 .nav-bar {
   /* position: sticky; */
   flex-direction: column;
@@ -101,16 +110,26 @@
   /* position: fixed; */
 }
 
+.sticky-header {
+border: solid 1px green;
+/* height: 100%; */
+position: sticky;
+/* position:fixed; */
+top: 0;
+left: 80px
+}
 .left-main {
-  /* position: fixed; */
+  position: fixed;
+  top: 0;
   /* bottom: 10px; */
   /* left: 400px; */
   padding: 10px;
-  border: none;
+
+  /* border: none; */
   display: flex;
   flex-direction: column;
-  height: 100%;
-  justify-content: space-evenly;
+  /* height: 100%; */
+  /* justify-content: space-evenly; */
   /* border-right: 1px solid #ccc; */
   width: fit-content;
   /* margin-right: 20px; */
@@ -153,6 +172,9 @@
   background-color: #122943;
 }
 
+.explore-button:hover {
+  cursor: not-allowed;
+}
 .activity-button {
   cursor: pointer;
   width: 200px;
@@ -169,7 +191,9 @@
 .activity-button:hover {
   background-color: #122943;
 }
-
+.activity-button:hover {
+  cursor: not-allowed;
+}
 .messages-button {
   cursor: pointer;
   background-color: #36465d;
@@ -186,6 +210,9 @@
 
 .messages-button:hover {
   background-color: #122943
+}
+.messages-button:hover {
+  cursor: not-allowed;
 }
 
 .inbox-button {
@@ -204,6 +231,9 @@
 .inbox-button:hover {
   background-color: #122943
 }
+.inbox-button:hover {
+  cursor: not-allowed;
+}
 
 .account-button {
   cursor: pointer;
@@ -220,6 +250,9 @@
 
 .account-button:hover {
   background-color: #122943
+}
+.account-button:hover {
+  cursor: not-allowed;
 }
 
 .create-post:hover {
