--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -9,14 +9,13 @@
 }
 
 
-
+/*
 .toppage {
   width: 300px;
-  /* padding-left: 250px; */
   display: flex;
   justify-content: right;
   position: relative;
-}
+} */
 
 .logo {
   display: flex;
@@ -36,6 +35,7 @@
   margin-left: 30px;
   width: 150px;
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .ad {
@@ -62,7 +62,7 @@
   margin-left: 20px;
   position: fixed;
   /* z-index: 60; */
-  top: 4px;
+  top: 15px;
   right:30px
 }
 
@@ -83,6 +83,14 @@
   padding-left: 25px;
   color: #BCC3CA;
 
+
+}
+
+.wummoble {
+  display: none;
+  height: 40px ;
+  width: 40px;
+  cursor: pointer;
 }
 
 
@@ -104,17 +112,22 @@
   flex-direction: column;
   width: fit-content;
   display: inline-flex;
-}
 
+}
+.float-bar {
+  display: flex;
+  flex-direction: row;
+}
 .box-one {
   width: fit-content;
   display: flex;
-  /* position: fixed; */
+  position: sticky;
+  top: 0
 }
 
 .sticky-header {
-border: solid 1px green;
-/* height: 100%; */
+/* border: solid 1px green;
+height: 100%; */
 position: sticky;
 /* position:fixed; */
 top: 0;
@@ -122,10 +135,12 @@ left: 80px;
 height: fit-content;
 padding: 10px;
 }
+
 .left-main {
-  position: fixed;
+  position: static;
   top: 0;
   padding: 10px;
+
 
   /* border: none; */
   display: flex;
@@ -140,6 +155,10 @@ padding: 10px;
 
 }
 
+.bottom-main {
+  display: flex;
+
+}
 .home-button {
   cursor: pointer;
   width: 200px;
@@ -331,12 +350,89 @@ padding: 10px;
 .log-out-button:hover {
   background-color: #122943;
 }
+.box-floor {
+  /* display: none; */
+  width: fit-content;
+  display: none;
+  position:fixed;
+  bottom: 0px;
+  right: 50%;
+  transform: translateX(50%);
+  z-index: 3;
+  background-color: black;
+}
+
+.test {
+  display: flex;
+  flex-direction: row;
+  padding: 8px;
+  border-radius: 8px;
+
+}
+.glass-button {
+  cursor: pointer;
+  background-color: #36465d;
+  width: 200px;
+  margin: 5px;
+  padding: 10px;
+  background-color: transparent;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); */
+  display: flex;
+}
+
+.glass-button:hover {
+  background-color: #122943;
+  cursor: not-allowed;
+}
+
 @media (max-width: 1023px) {
   .search-bar {
     display: none;
   }
-  .left-main {
+  .sticky-header span {
     display: none;
+    width: fit-content;
 
 }
+.wummoble {
+  display:flex;
+}
+.left-main{
+  width: auto;
+}
+
+.wumlogo {
+  display: none;
+}
+
+  .create-post {
+    display: flex;
+    align-items: center;
+   justify-content: center;
+    width: 50px;
+    height: 40px;
+  }
+  .log-in-button, .glass-button, .log-in, .signup, .log-out-button, .account-button, .explore-button, .activity-button, .messages-button, .inbox-button, .home-button {
+    width: fit-content;
+  }
+  .box-floor{
+    display: flex;
+
+  }
+  .auth {
+    display: flex;
+  }
+  .box-one {
+    display: none;
+  }
+  .test span {
+    display: none;
+    width: fit-content;
+  }
+  .all-posts{
+    top: 0
+  }
 }
