--- a/react-vite/src/components/SignupFormModal/SignupForm.css
+++ b/react-vite/src/components/SignupFormModal/SignupForm.css
@@ -79,6 +79,15 @@
     margin-top: 12px;
 }
 
+.errormatch {
+
+    color: red;
+    /* position: fixed; */
+    font-size: 14px;
+    /* padding-top: 8px; */
+
+}
+
 .signup-button1:hover {
     cursor: pointer;
     box-shadow: 0px 4px 8px 0px rgba(0, 0, 0);
