feature 3 review fixed with added flicker to post

--- a/react-vite/src/components/Post/Post.css
+++ b/react-vite/src/components/Post/Post.css
@@ -22,7 +22,16 @@
   /* white-space: nowrap; */
 
 }
-
+.flicker {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.loading {
+  color: white;
+  font-size: 72px;
+}
 .commnamedate {
   display: flex;
   justify-content: space-between;
